Fix flex issues on smaller screens and remove unnecessary information

--- a/styles-media-queries.css
+++ b/styles-media-queries.css
@@ -449,7 +449,7 @@
     
     /* #region SKILLS */
     .skills-container {
-        width: 100%;
+        flex-basis: 100%;
         padding: 5px 10px;
         font-size: 0.95rem;
     }
